[package]
name = "components"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }

defluencer = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }
linked-data = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }
ipfs-api = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }

ybc = { git = "https://github.com/Sionois/ybc", branch = "yew20" }
yew = { version = "0.20", default-features = false, features = ["csr"] }
yew-router = { version = "0.17", default-features = false, features = []  }

cid = { version = "0.9", default-features = false, features = ["std"] }
either = { version = "1", default-features = false, features = [] }
futures-util = { version = "0.3", default-features = false, features = [] }
gloo-console = { version = "0.2", default-features = false, features = [] }
pulldown-cmark = { version = "0.9", default-features = false, features = [] }
serde = { version = "1", default-features = false, features = [] }
serde_json = { version = "1", default-features = false, features = [] }
wasm-bindgen = { version = "0.2.84", default-features = false, features = [] }
web-sys = { version = "0.3.59", default-features = false, features = [
    "File",
    "FilePropertyBag",
    "Url",
    "HtmlMediaElement",
    "MediaSource",
    "MediaSourceReadyState",
    "SourceBuffer",
    "TimeRanges",
    "Performance"
]}
words-count = { version = "0.1", default-features = false, features = [] }