[package]
name = "feed"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
components = { path = "../components" }

linked-data = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }

ybc = { git = "https://github.com/Sionois/ybc", branch = "yew20" }
yew = { version = "0.20", default-features = false, features = ["csr"] }

cid = { version = "0.9", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = [] }
gloo-console = { version = "0.2", default-features = false, features = [] }