[package]
name = "live"
version = "0.1.0"
edition = "2021"

[dependencies]
components = { path = "../components"}

ybc = { git = "https://github.com/Sionois/ybc", branch = "deps_fix" }
yew = { git = "https://github.com/SionoiS/yew", branch = "remove-tokio", features = ["csr"] }

cid = { version = "0.9", default-features = false, features = ["std"] }
