[package]
name = "live"
version = "0.1.0"
edition = "2021"

[dependencies]
components = { path = "../components"}

ybc = { git = "https://github.com/Sionois/ybc", branch = "yew20" }
yew = { version = "0.20", default-features = false, features = ["csr"] }

cid = { version = "0.9", default-features = false, features = ["std"] }
