[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
channel = { path = "../channel" }
content = { path = "../content" }
feed = { path = "../feed" }
home = { path = "../home" }
live = { path = "../live" }
settings = { path = "../settings" }
utils = { path = "../utils" }

linked-data = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }
ipfs-api = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }

cid = { version = "0.8", default-features = false, features = ["std"] }
gloo-console = { version = "0.2", default-features = false, features = [] }
wasm-bindgen-futures = { version = "0.4", default-features = false, features = [] }
web3 = { version = "0.18", default-features = false, features = ["wasm", "eip-1193"] }
#ybc = { git = "https://github.com/dungeonfog/ybc", branch = "yew-0-19-update" }
yew = { version = "0.19", default-features = false, features = [] }
yew-router = { version = "0.16", default-features = false, features = [] }