[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
channel = { path = "../channel" }
content = { path = "../content" }
feed = { path = "../feed" }
home = { path = "../home" }
live = { path = "../live" }
settings = { path = "../settings" }
utils = { path = "../utils" }

linked-data = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }

ybc = { git = "https://github.com/Sionois/ybc", branch = "deps_fix", default-features = false }
yew = { git = "https://github.com/SionoiS/yew", branch = "remove-tokio", default-features = false, features = ["csr"] }
yew-router = { git = "https://github.com/SionoiS/yew", branch = "remove-tokio", default-features = false }

cid = { version = "0.8", default-features = false, features = ["std"] }
gloo-console = { version = "0.2", default-features = false, features = [] }

