[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
channel = { path = "../channel" }
content = { path = "../content" }
feed = { path = "../feed" }
home = { path = "../home" }
live = { path = "../live" }
settings = { path = "../settings" }
utils = { path = "../utils" }
components = { path = "../components" }

linked-data = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }

yew = { version = "0.20", default-features = false, features = ["csr"] }
yew-router = { version = "0.17", default-features = false, features = []  }

gloo-console = { version = "0.2", default-features = false, features = [] }
heck = { version = "0.4", default-features = false, features = [] }