[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }

ipfs-api = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }
linked-data = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }
ybc = { git = "https://github.com/dungeonfog/ybc", branch = "yew-0-19-update" }

gloo-console = { version = "0.2", default-features = false, features = [] }
gloo-storage = { version ="0.2", default-features = false, features = [] }
wasm-bindgen = { version = "0.2.81", default-features = false, features = [] }
wasm-bindgen-futures = { version = "0.4", default-features = false, features = [] }
web-sys = { version = "0.3.58", default-features = false, features = [
    "HtmlInputElement",
]}
yew = { version = "0.19", default-features = false, features = [] }
