[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }

linked-data = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }

ybc = { git = "https://github.com/Sionois/ybc", branch = "deps_fix" }
yew = { git = "https://github.com/SionoiS/yew", branch = "remove-tokio", features = ["csr"] }

cid = { version = "0.8", default-features = false, features = ["std"] }
gloo-console = { version = "0.2", default-features = false, features = [] }
gloo-storage = { version ="0.2", default-features = false, features = [] }
wasm-bindgen = { version = "0.2.82", default-features = false, features = [] }
wasm-bindgen-futures = { version = "0.4", default-features = false, features = [] }
web-sys = { version = "0.3.59", default-features = false, features = [
    "HtmlInputElement",
    "Window",
    "Location"
]}

