[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
components = { path = "../components" }

ipfs-api = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }
linked-data = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }
defluencer = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }

ybc = { git = "https://github.com/Sionois/ybc", branch = "yew20" }
yew = { version = "0.20", default-features = false, features = ["csr"] }

cid = { version = "0.9", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = [] }
gloo-console = { version = "0.2", default-features = false, features = [] }
gloo-storage = { version ="0.2", default-features = false, features = [] }
heck = { version = "0.4", default-features = false, features = [] }

web-sys = { version = "0.3.59", default-features = false, features = [
    "File",
]}

