[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/SionoiS/yew", branch = "remove-tokio", default-features = false, features = ["csr"] }

defluencer = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }
linked-data = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }
ipfs-api = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }

chrono = { version = "0.4", default-features = false, features = [] }
cid = { version = "0.8", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = [] }
gloo-console = { version = "0.2", default-features = false, features = [] }
gloo-storage = { version ="0.2", default-features = false, features = [] }
hex = { version = "0.4", default-features = false, features = [] }
serde = { version = "1", default-features = false, features = ["std"] }
web3 = { version = "0.18", default-features = false, features = ["wasm", "eip-1193"] }