[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ipfs-api = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }
defluencer = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }
linked-data = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }
dag-jose = { git = "https://github.com/Defluencer/rust-defluencer", branch = "develop" }

chrono = { version = "0.4", default-features = false, features = [] }
cid = { version = "0.9", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = [] }
js-sys = { version = "0.3", default-features = false, features = [] }
gloo-console = { version = "0.2", default-features = false, features = [] }
gloo-storage = { version ="0.2", default-features = false, features = [] }
hex = { version = "0.4", default-features = false, features = [] }
#when my PR is merged rexie = { version = "0.4", default-features = false, features = [] }
rexie = { git = "https://github.com/SionoiS/rexie", branch = "derive", default-features = false, features = [] }
serde = { version = "1", default-features = false, features = ["std"] }
serde_json = {version = "1", default-features = false, features = [] }
yew = { version = "0.20", default-features = false, features = ["csr"] }
wasm-bindgen = { version = "0.2", default-features = false, features = [] }
wasm-bindgen-futures = { version = "0.4", default-features = false, features = [] }
web3 = { version = "0.18", default-features = false, features = ["wasm", "eip-1193"] }

web-sys = { version = "0.3", default-features = false, features = [
    "Window",
    "Crypto",
    "SubtleCrypto",
    "CryptoKeyPair",
    "CryptoKey",
]}



